# pramana

./: .env.example  .gitignore  pyproject.toml
docs/superpowers/plans/: 2026-03-18-batch-a-pipeline-quality.md  2026-03-18-pdf-upload-sse-progress.md
docs/superpowers/specs/: 2026-03-18-batch-a-pipeline-quality-design.md
frontend/src/: App.tsx  index.css  theme.tsx
frontend/src/api/: client.ts
frontend/src/pages/: AnalysisProgress.tsx  ConfirmHypothesis.tsx  EvidenceExplorer.tsx  ExperimentPlanner.tsx  HypothesisInput.tsx  PaperCuration.tsx  ReportChat.tsx  ReportHistory.tsx  ReportViewer.tsx  ReportViewerDisplay.tsx  SavedReportViewer.tsx
src/pramana/: __init__.py  api.py  cli.py  config.py
src/pramana/agents/: __init__.py  base.py  domain_prompts.py  planner.py  pool.py  report_designer.py  specialists.py
src/pramana/flows/: __init__.py  registry.py  router.py
src/pramana/lenses/: base.py  bias_detection.py  claim_verification.py  contradiction.py  evidence_table.py  gap_discovery.py  knowledge_graph.py  (+9 more)
tests/: conftest.py  test_api.py  test_confidence.py  test_config_batch_a.py  test_ensemble.py  test_extraction.py  test_feedback.py  test_hybrid_rag.py  test_hypothesis.py  test_models.py  test_normalization.py  test_pdf_extraction.py  test_pico.py  test_rag.py  test_screening.py
tests/test_lenses/: test_lenses.py
tests/test_sources/: test_arxiv.py  test_corpus.py  test_crossref.py  test_pubmed.py  test_semantic_scholar.py
venue_data/: bme_venues.json  cs_venues.json  economics_venues.json  general_venues.json  social_science_venues.json
(+26 files in other folders)
